# ai-crypto-hedge-fund

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
configs/: baseline.yaml  single_asset_models.yaml  static_multi_asset_portfolio.yaml
data/raw/: ADA_USDT_1d.csv  BNB_USDT_1d.csv  BTC_USDT_1d.csv  DOGE_USDT_1d.csv  ETH_USDT_1d.csv  SOL_USDT_1d.csv  XRP_USDT_1d.csv
notebooks/: 01_baseline_single_asset.ipynb  02_single_asset_models.ipynb  03_static_multi_asset_portfolio.ipynb
scripts/: download_multi_asset_ohlcv.py  download_ohlcv.py  generate_sample_data.py  run_baseline.py  run_single_asset_models.py  run_static_multi_asset_portfolio.py
src/crypto_hf/: __init__.py  config.py
src/crypto_hf/backtesting/: base.py  vectorbt_engine.py
src/crypto_hf/data/: loader.py  multi_asset_loader.py  validation.py
src/crypto_hf/features/: model_features.py  targets.py  technical.py
src/crypto_hf/metrics/: classification.py  performance.py  signal_diagnostics.py
src/crypto_hf/models/: base.py  dummy.py  ml.py  (+1 more)
tests/: conftest.py  helpers.py  test_backtest_smoke.py  test_cleanup_pipeline.py  test_data_validation.py  test_features.py  test_metrics.py  test_model_features.py  test_model_signal.py  test_multi_asset_data.py  test_portfolio_benchmarks.py  test_portfolio_estimators.py  test_portfolio_optimizers.py  test_portfolio_weight_projection.py  test_single_asset_models.py  test_static_multi_asset_pipeline.py  test_static_portfolio_backtest.py  test_static_portfolio_reports.py  test_strategies.py  test_targets.py  test_vectorbt_engine.py
(+21 files in other folders)
