[project]
name = "crypto-hf"
version = "0.1.0"
description = "AI Crypto Hedge Fund MVP — offline backtesting foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "vectorbt>=0.26",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_hf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "pytest>=8.0",
]
test = [
    "pytest>=8.0",
]
